Added classes to elements in HTML and text decoration in CSS file.

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <p class="subtitle subtitle__light-theme">
           для настоящих ценителей атмосферы
         </p>
-        <h2 class="title">Наши мастера</h2>
+        <h2 class="title title__light-theme">Наши мастера</h2>
         <ul class="masters__list">
           <li class="masters__list-item">
             <img
@@ -264,7 +264,9 @@
 
       <!-- GALLERY -->
       <section class="gallery">
-        <p>На латинском языке “барба” означает “борода”</p>
+        <p class="subtitle subtitle__light-theme">
+          На латинском языке “барба” означает “борода”
+        </p>
         <h2>Галерея наших работ</h2>
         <ul>
           <li>
@@ -305,45 +307,56 @@
       <div>
         <!-- CONTACT FORM -->
         <section id="contact-form">
-          <h2>Онлайн-запись</h2>
+          <h2 class="title title__dark-theme">Онлайн-запись</h2>
         </section>
         <!-- CONTACT INFORMATION -->
         <section id="contacts">
-          <h2>Контакты</h2>
+          <h2 class="title title__dark-theme">Контакты</h2>
           <address>
             <ul>
               <li>
                 <a
+                  class="contact-list__link"
                   href="https://goo.gl/maps/wezojrujGCURsHZbA"
                   target="_blank"
                   rel="noopener noreferrer"
                   >ул. Васильковая, 7А Киев, 08132</a
                 >
               </li>
-              <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
               <li>
-                <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+                <a class="contact-list__link" href="tel:+380441111111"
+                  >+38 044 111 11 11</a
+                >
+              </li>
+              <li>
+                <a class="contact-list__link" href="mailto:barbershop@email.com"
+                  >barbershop@email.com</a
+                >
               </li>
             </ul>
           </address>
-          <p>время работы</p>
-          <p>Ежедневно <time>с 9:00 до 22:00</time></p>
+          <p class="subtitle title__dark-theme">время работы</p>
+          <p class="contact-info__date">
+            Ежедневно <time>с 9:00 до 22:00</time>
+          </p>
         </section>
       </div>
     </main>
     <footer>
-      <p>&copy; Copyright 2020</p>
-      <ul>
-        <li>
+      <p class="copyright">&copy; Copyright 2020</p>
+      <ul class="social-links">
+        <li class="social-links__item">
           <a
+            class="social-links__link"
             href="https://www.instagram.com"
             target="_blank"
             rel="noopener noreferrer"
             >Instagram</a
           >
         </li>
-        <li>
+        <li class="social-links__item">
           <a
+            class="social-links__link"
             href="https://www.youtube.com"
             target="_blank"
             rel="noopener noreferrer"
